test_suite/tests/ui/identifier/field_tuple.stderr
error: field_identifier may only contain unit variants
 --> $DIR/field_tuple.rs:4:10
  |
4 | #[derive(Deserialize)]
  |          ^^^^^^^^^^^

error: aborting due to previous error

