test_suite/tests/ui/identifier/field_tuple.rs
#[macro_use]
extern crate serde_derive;

#[derive(Deserialize)]
#[serde(field_identifier)]
enum F {
    A,
    B(u8, u8),
}

fn main() {}
